backend/nookpost-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nookpost
  labels:
    goldilocks.fairwinds.com/enabled: "true"
    pod-security.kubernetes.io/enforce: privileged
