backend/backend-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nookpost-backend
  namespace: nookpost
spec:
  hosts:
  - "nookpost-dev-api.jkulzer.dev"
  gateways:
  - istio-system/main-gateway
  http:
  - route:
    - destination:
        host: backend
        port:
          number: 5000
